# concerto

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  concerto.toml.example  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  slack-app-manifest.yml  test_aggregate_status_counts.py  test_discord_reaction_name.py  test_multi_connector.py
.claude/skills/add-venue/: SKILL.md
src/concerto/: __main__.py  board.py  concert_scraper.py  discord_bot.py  slack_bot.py
tests/: test_aggregate_status_counts.py  test_castlefest_scraper.py  test_channel_names.py  test_combined_boards.py  test_discord_guild_cache.py  test_discord_permissions.py  test_discord_reaction_name.py  test_ekko_scraper.py  test_fold_message.py  test_multi_connector.py  test_sse_stream.py
